@@ -44,7 +44,7 @@ IncludeCategories:
     Priority:        3
   - Regex:           '^<'
     Priority:        3
-  - Regex:           '^["<](kodi|p8-platform)\/.*\.h[">]$'
+  - Regex:           '^["<](kodi)\/.*\.h[">]$'
     Priority:        2
   - Regex:           '.*'
     Priority:        1
