@@ -1,8 +1,7 @@
 Source: kodi-pvr-hts
 Priority: extra
 Maintainer: Nobody <nobody@kodi.tv>
-Build-Depends: debhelper (>= 9.0.0), cmake, libp8-platform-dev,
-               kodi-addon-dev
+Build-Depends: debhelper (>= 9.0.0), cmake, kodi-addon-dev
 Standards-Version: 4.1.2
 Section: libs
 
