@@ -1,1 +1,0 @@
-p8-platform https://github.com/afedchin/platform.git win10
